--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -17,6 +17,7 @@
       <div>
         <h1>Aqui vem o login,</h1>
         <h2>- levando pra páginas sem o header e navbars</h2>
+        <p>teste</p>
       </div>
     </ion-content>
   </body>
