--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Bem Vindo!</title>
   </head>
   <body>
     <ion-header>
       <ion-navbar>
-        <ion-title>Home</ion-title>
+        <ion-title>Faça seu Login</ion-title>
       </ion-navbar>
     </ion-header>
 
@@ -18,6 +18,7 @@
         <h1>Aqui vem o login,</h1>
         <h2>- levando pra páginas sem o header e navbars</h2>
         <p>teste</p>
+        <button ion-button>Login</button>
       </div>
     </ion-content>
   </body>
