1 file modified, 1 added

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bem Vindo!</title>
+    <style href="./login.css"></style>
   </head>
   <body>
     <ion-header>
@@ -18,7 +19,7 @@
         <h1>Aqui vem o login,</h1>
         <h2>- levando pra páginas sem o header e navbars</h2>
         <p>teste</p>
-        <button ion-button>Login</button>
+        <button ion-button class="login">Login</button>
       </div>
     </ion-content>
   </body>
