--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -19,7 +19,7 @@
         <h1>Aqui vem o login,</h1>
         <h2>- levando pra páginas sem o header e navbars</h2>
         <p>teste</p>
-        <button ion-button class="login">Login</button>
+        <button ion-button class="login" style="background-color: rebeccapurple;">Login</button>
       </div>
     </ion-content>
   </body>
